# ghostvest

./: .gitignore  LICENSE  README.md
.github/: pull_request_template.md
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: crypto_utils.py  main.py  models.py
backend/app/services/: pr_analyzer.py  solana_client.py  zero_g_service.py
backend/tests/: test_ai_audit.py  test_crypto_utils.py
contracts/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
contracts/migrations/: deploy.ts
contracts/programs/ghostvest/: Cargo.toml
contracts/programs/ghostvest/src/: lib.rs
contracts/tests/: ghostvest.ts
demo/: index.html
docs/: demo-script.md  setup-guide.md
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/claim/: page.tsx
frontend/components/: WalletProvider.tsx
frontend/hooks/: useStealthWithdraw.ts
frontend/lib/: stealth.ts  toast.ts
frontend/scripts/: demo-claim.js
frontend/types/: global.d.ts
tee_crypto/: package-lock.json  package.json  stealth.test.ts  stealth.ts  test_vectors.json  tsconfig.json  vitest.config.ts
