[package]
name = "ghostvest"
version = "0.1.0"
description = "GhostVest: 隐私薪酬 Escrow 合约"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ghostvest"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
